--- a/lesson3.Rmd
+++ b/lesson3.Rmd
@@ -9,7 +9,12 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-The learning objectives here are 1) to work through the code/add/commit cycle in RStudio, and 2) to get a feel for how you can move around the repository. This is pretty mind-bendy to me at times, but if you go back to the core idea of git storing a series of snapshots as nodes along a graph, you'll be able to wrap your head around the idea of revisiting any of those nodes at any time.
+The learning objectives here are: 
+
+1. to work through the code/add/commit cycle in RStudio, and 
+2. to get a feel for how you can move around the repository 
+
+This is pretty mind-bendy to me at times, but if you go back to the core idea of git storing a series of snapshots as nodes along a graph, you'll be able to wrap your head around the idea of revisiting any of those nodes at any time.
 
 # Part 1
 ## RStudio
@@ -19,11 +24,26 @@ You will have seen how we did this in the Lecture - now it's your turn.
 
 The first thing we have to do is create a new (RStudio) Project within the directory that contains your git repository. For me it was ```my_repo```
 
-Make some changes to a file, add and commit them. Also, add a new script, and note the difference in the buttons in the git tab in RStudio - i.e. when do you see an A in the button vs. an M? What are the command line analogs?
+Make some changes to a file, add and commit them. 
 
-Since you have the data, and shells of scripts, spend some time making a mini-analysis (very mini!). We're going to use a script that I wrote for you, and I'm going to have you re-factor it to make a complete "analysis."
+Here are a few additional things to try and experiment with:
 
-Start with the ```prepareDUMLData.R``` script that came with the Box link, and open it up in RStudio. Refactor the code in this script to 4 different R scripts, using the shell scripts that you already have from Lesson 1:
+* Add a new script, and note the difference in the buttons in the git tab in RStudio 
+    + when do you see an A in the button vs. an M? 
+    + What are the command line analogs?
+
+## Mini-Analysis
+Since you have the data, and shells of scripts, spend some time making a mini-analysis (very mini!). We're going to use a script that I wrote for you, and I'm going to have you re-factor it to make a complete "analysis." 
+
+The script is called ```prepareDUMLData.R```, and it is in the Box link I sent; download and open it up in RStudio.
+
+The idea behind this exercise comes from from a workshop I took at RStudio::conf in 2019 - taught by Jenny Bryan of RStudio. She put up this table as a way to think about organizing your data:
+
+![](images/2020-01-21_workflow.png)
+
+
+
+So, using this table and the ```prepareDUMLData.R``` script, refactor the code in this script to 4 different R scripts, using the shell scripts that you already have from Lesson 1:
 
 1. Put reading code in ```read_data.R``` 
 2. Put wrangling code in ```wrangle_data.R``` 
@@ -31,6 +51,8 @@ Start with the ```prepareDUMLData.R``` script that came with the Box link, and o
 4. Put ```lmer()``` code in ```run_analysis.R``` 
 
 And use version control for it all as you go. Once you are finished, place all of the scripts into 1 controller file - the ```runAll.R``` file from Lesson 1.
+
+When you are done, commit the changes.
 
 Back to the lecture.
 
@@ -49,7 +71,9 @@ Note that the order matters. The code above says show me what changed as the rep
 
 When you think about working with your future self - let alone any additional collaborators - these diffs are powerful ways to see what actually changed. Couple the diffs with a good commit message, and you can quickly get oriented into how and why things change over time. 
 
-Compare using this approach this to using an R script that you just rename, or keep "saving as" each time you alter it. You may get to a point with that script, where it's broken and it's ~~hard~~ impossible to go back to the state when it last worked. Or you may recall having ventured down a pathway that you gave up on, only _now_ you want to get back to that path to try that experiment again. With ```git``` this is straightforward. Without ```git``` it's just about impossible.
+Compare using this approach this to using an R script that you just rename, or keep "saving as" each time you alter it. You may get to a point with that script, where it's broken and it's ~~hard~~ impossible to go back to the state when it last worked. 
+
+Or you may recall having ventured down a pathway that you gave up on, only _now_ you want to get back to that path to try that experiment again. With ```git``` this is straightforward. Without ```git``` it's just about impossible.
 
 One thing you can get in the habit of doing (if it works for you) is to look at the diffs before you commit. My typical workflow is something like:
 
@@ -82,7 +106,7 @@ Depending on the changes you have or have not made, this may not seem mind-expan
 
 Two thoughts here:
 
-1. If we wanted to recreate old figures. This is one way we could do it. Checkout an old repo, and re-issue the R code from the command line to make the file. You can also hang on to them as we mentioned in lecture via the storing of old copies of the ```results/Figures``` folder with an archival date. Just make sure you are consistent if you follow this, otherwise you may end up with an old file that has a current name, but not the current content, etc.
+1. If we wanted to recreate old figures, this is one way we could do it. Checkout an old repo, and re-issue the R code from the command line to make the file. You can also hang on to them as we mentioned in lecture via the storing of old copies of the ```results/Figures``` folder with an archival date. Just make sure you are consistent if you follow this, otherwise you may end up with an old file that has a current name, but not the current content, etc.
 
 2. Type ```git log --oneline --decorate``` here to see what you get. You'll probably see a shortened history, because we've moved the pointer back to this particular commit, and commits know their parent commit - so the later ones aren't listed. Here's a snapshot:
 
