Add Instructions on a PDF
i.e. we want to manually add in a pdf just in case the calling R from the command line doesn't work

--- a/lesson2c.Rmd
+++ b/lesson2c.Rmd
@@ -37,11 +37,16 @@ And what happens? Path dependencies...most likely only for the Windows users.
 
 ![](images/path_depend.png)
   
-Which is annoying, but fixable by adding the environment variables and restarting git bash. When you issue it after adding the path, and then type ```ls```, you'll see the pdf listed:
+Which is annoying, but fixable by adding the environment variables and restarting git bash. 
+
+When you issue it after adding the path, and then type ```ls```, you'll see the pdf listed:
 
 ![](images/cool_plot.png)
 
-Type ```git status``` to see what ```git``` makes of the new file:
+
+> Nota bene -- if you don't want to mess around with the path variables, I've also added a pdf to the box link - ```gm175.pdf``` You can just add this file to the repository manually
+
+So whether you made it from R, or manually added it in, type ```git status``` to see what ```git``` makes of the new file (nb that the pdf file name may be different):
 
 ![](images/plot_git_status.png)
 
