Add Full Call to R
i.e. include the full path to the program

--- a/lesson2c.Rmd
+++ b/lesson2c.Rmd
@@ -29,11 +29,18 @@ Save the file and head back to the terminal. Now we have to check the status (of
 
 Once the repo is clean, run this R code:
 
+Windows:
+
+```{r, eval=FALSE, engine='bash'}
+/C/Program\ Files/R/R.exe CMD BATCH --vanila src/plot_data.R
+```
+
+Mac:
 ```{r, eval=FALSE, engine='bash'}
 R CMD BATCH --vanilla src/plot_data.R
 ```
 
-And what happens? Path dependencies...most likely only for the Windows users.
+And what happens? Path dependencies -- maybe? Most likely only for the Windows users.
 
 ![](images/path_depend.png)
   
