--- a/lesson4.Rmd
+++ b/lesson4.Rmd
@@ -21,30 +21,30 @@ Important note here - git is huge and can be frustrating - but since it's huge a
 At any rate, one good workflow to make a connection between a local repo and GitHub is as follows. 
 
 ## Github First
-We start on GitHub, so this assumes you have no local code:
+If we start by initializing the repository on GitHub, this usually assumes you have no local code. The process flow to do that is something like this:
 
-1. on GitHub, create a new repository. I typically add an R themed .gitignore file, and a README
-2. copy its url (http or ssh) to clone it
-3. Navigate to the parent folder, clone the repo (note this is critical so pay attention to where you want this)
-4. At this point you can either cd into the repo and start work, or if you want to work in RStudio, simply start a new project with the "Existing Directory" option chose the repo and the git tab will appear.
+* on GitHub, create a new repository. I typically add an R themed .gitignore file, and a README
+* copy its url (http) to clone it
+* Navigate to the parent folder, clone the repo 
+* At this point you can either cd into the repo and start work, or if you want to work in RStudio, simply start a new project with the "Existing Directory" option chose the repo and the git tab will appear.
 
 You can also bypass the cloning from the command line by choosing the option to clone from a repo, but make sure all your ssh keys/ducks are in a row.
 
-Now when you look at the git tab in RStudio, you will see one important difference from before - the Push/Pull tabs are live, i.e. they are not greyed out.
 
 ## Local First
-However, what if you already have a local repo that is not connected to GitHub? This is the situation we have here. 
+However, what if you already have a local repo that is not connected to GitHub? This is the situation _we have here._
+
 First, in your local repo, type this:
 
 ```{r engine='bash', eval=FALSE}
 git remote -v
 ```
 
-You should see nothing! How do we connect to GitHub then? Follow these steps:
+You should see nothing! How do we connect to GitHub then? The process flow here is:
 
 1. Go to GitHub and make a new __empty__ repo using the same name as the one on your computer (you can use different names, but let's keep it simple for now)
-2. Copy the url of the repo - using the ssh option
-3. Add the remote locally
+2. Copy the url of the repo - using the html option
+3. Add the remote url to your local repository
 4. Verify the connections
 5. Push the changes.
 
@@ -58,7 +58,7 @@ Once you click on Create Repository, GitHub gives you this _really_ helpful page
 In our case, we're going to push the existing repo *from* the command line (note that of course your url will be different):
 
 ```{r addRemote, engine='bash', eval=FALSE}
-git remote add origin git@github.com:robschick/my_repo.git
+git remote add origin https://github.com/robschick/my_repo.git
 ```
 
 Once we've added it, let's look again to see if we are talking to github:
@@ -67,7 +67,7 @@ Once we've added it, let's look again to see if we are talking to github:
 git remote -v
 ```
 
-I see this now:
+I see this now (note that I used SSH, yours will look a bit different since you used html):
 
 ![](images/remote2.png)
 
@@ -81,6 +81,8 @@ And finally we can see them on GitHub to make sure all is right.
 
 ![](images/pushGitHub.png)
 
+Ok - back to the Lecture
+
 # Part 2 -- Merge Conflict
 The dreaded merge conflict! These can be a pain in the butt when you first encounter them, but all in all, they are pretty straightforward. As you get more advanced with git, you can configure a graphical merge tool if you want to help with this. They can be great, but for now, we'll just handle this on the command line.
 
@@ -89,7 +91,7 @@ What is a merge conflict? It's essentially what happens when the repository gets
 We don't have a node here, but we can mimic it well enough with a local repo and GitHub:
 
 1. In your repo on your computer, make a change to a file, add it, and commit it, but don't push it to GitHub.
-2. Then, navigate to github, and make a change to the same file on the same line of code. Use the pencil icon to edit it directly
+2. Then, navigate to GitHub, and make a change to the same file on the same line of code. Use the pencil icon to edit it directly
 3. Add a commit message, and commit the change
 4. Navigate back to the command line and issue the ```git push``` command
 5. If you are lucky, all hell will break loose
